--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,9 @@ dependencies = [
     "GitPython",
     "onnx",
     "torchao",
+    "transformers",
+    "accelerate",
+    "huggingface_hub",
 ]
 
 [project.urls]
